Fix minor alignment issues in certificate preview

--- a/css/qsm-certificate-admin.css
+++ b/css/qsm-certificate-admin.css
@@ -83,7 +83,7 @@
     color: red;
 }
 #qsm-certificate-show-popup .qsm-popup__container{
-    min-width: 1000px;
+    min-width: fit-content;
     margin: 0 30px 30px;
 }
 .qsm-certificate-popup-footer{
